// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build with optDependencies builds w/ opt dependency installed snapshot build-env 1`] = `
"# Build environment
# package:            root@link-dev:./package.json
# depspec:            dependencies(self)+devDependencies(self)
# mode:               buildDev
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"root\\"

#
# optDep@path:optDep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%optdepid%/stublibs:%esyStorePath%/i/%optdepid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%optdepid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%optdepid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%optdepid%/bin:$PATH\\"

#
# dep@path:dep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depid%/stublibs:%esyStorePath%/i/%depid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depid%/bin:$PATH\\"

#
# Built-in
#
export OCAMLFIND_CONF=\\"%projectPath%/_esy/default/store/p/%id%/etc/findlib.conf\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"
export DUNE_STORE_ORIG_SOURCE_DIR=\\"true\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with optDependencies builds w/ opt dependency installed snapshot build-env 2`] = `
"# Build environment
# package:            dep@path:dep
# depspec:            dependencies(self)
# mode:               build
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyPrefixPath%/3/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/source/i/dep__5d502355\\"
export cur__root=\\"%esyPrefixPath%/source/i/dep__5d502355\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"

#
# optDep@path:optDep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%optdepid%/stublibs:%esyStorePath%/i/%optdepid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%optdepid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%optdepid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%optdepid%/bin:$PATH\\"

#
# Built-in
#
export OCAMLFIND_CONF=\\"%esyStorePath%/p/%id%/etc/findlib.conf\\"
export DUNE_BUILD_DIR=\\"%esyPrefixPath%/3/b/%id%\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with optDependencies builds w/o opt dependency installed snapshot build-env 1`] = `
"# Build environment
# package:            root@link-dev:./package.json
# depspec:            dependencies(self)+devDependencies(self)
# mode:               buildDev
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"root\\"

#
# dep@path:dep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depid%/stublibs:%esyStorePath%/i/%depid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depid%/bin:$PATH\\"

#
# Built-in
#
export OCAMLFIND_CONF=\\"%projectPath%/_esy/default/store/p/%id%/etc/findlib.conf\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"
export DUNE_STORE_ORIG_SOURCE_DIR=\\"true\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with optDependencies builds w/o opt dependency installed snapshot build-env 2`] = `
"# Build environment
# package:            dep@path:dep
# depspec:            dependencies(self)
# mode:               build
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyPrefixPath%/3/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/source/i/dep__5d502355\\"
export cur__root=\\"%esyPrefixPath%/source/i/dep__5d502355\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"
export OCAMLFIND_CONF=\\"%esyStorePath%/p/%id%/etc/findlib.conf\\"
export DUNE_BUILD_DIR=\\"%esyPrefixPath%/3/b/%id%\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;
